# EmotionDetectionAi

./: .gitattributes  .gitignore  .gitmodules  ai_frame_processing.py  ai_processing.py  index.html  library.cpp  main.cpp  main.h  main.py  pybind_setup.py  readme.md  test_main.spec
backend/core/: CMakeLists.txt  library.h  main.cpp
backend/core/SocketConnectionTester/: package-lock.json
backend/core/SocketConnectionTester/src/: index.ts
backend/frame_processor/: ai_frame_processing.py  api_request.py  database_parcer.py  test_main.py  threadsonTest.py
client_data_input/camera-client/: .editorconfig  README.md  deploy.sh  package-lock.json  package.json  vue.config.js
client_data_input/camera-client/public/: index.html
client_data_input/camera-client/src/: App.vue  main.ts
client_data_input/camera-client/src/components/: DebugViewer.vue  HamburgerMenu.vue  OptionNavBar.vue
client_data_input/camera-client/src/compositions/: test.js  useCamera.ts  useWebSocket.ts
client_data_input/camera-client/src/router/: index.ts
client_data_input/camera-client/src/views/: Debug.vue  Home.vue
core/: CMakeLists.txt  main.cpp  main.h  pybind_setup.py
css/: about.6f86e1a8.css  app.719031e0.css
frame_processor/: ai_frame_processing.py  api_request.py  database_parcer.py  main.py  test_main.py
js/: about.08b302a1.js  about.08b302a1.js.map  app.5b53679a.js  app.5b53679a.js.map  chunk-vendors.ec3e27c0.js  chunk-vendors.ec3e27c0.js.map
presentation/: readme.md
presentation/MarketSimulator/: .gitignore
presentation/MarketSimulator/Assets/Materials/: GlassMaterial.mat  асфальт_4.mat
presentation/MarketSimulator/Assets/Materials/Materials/: асфальт_4.mat
presentation/MarketSimulator/Assets/Scenes/: MainScene.unity  mainStage.unity
presentation/MarketSimulator/Assets/scripts/: CameraBehavior.cs  CameraController.cs  MainCharecterMovement.cs  Playercontroller.cs
presentation/MarketSimulator/ProjectSettings/: ProjectSettings.asset
